Fix overflowing issue

--- a/client/components/page/Page.css
+++ b/client/components/page/Page.css
@@ -33,7 +33,11 @@
 .Main {
     flex: 1 0 70%;
     height: 100%;
-    overflow: hidden;
+    /*  HACK: avalanche.ca/youth was overflowing and overflow hidden was not
+        working on avalanche.ca/forecasts/archives.
+        http://stackoverflow.com/questions/12022288/how-to-keep-a-flex-item-from-overflowing-due-to-its-text
+    */
+    min-width: 0;
 
     @media (--full-width) {
         padding: 0;
